--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,11 @@ before_script:
   - ccache --zero-stats --max-size=3G
 
 env:
-  - CI_TARGETS="all"     # Job1: Build main programs.
-  - CI_TARGETS="ext"     # Job2: Build extra programs
-  - CI_TARGETS="test"    # Job3: Test libraries.
+  - CI_TARGETS="depend"     # Job1: Build main programs.
+  - CI_TARGETS="all"        # Job1: Build main programs.
+  - CI_TARGETS="ext_depend" # Job2: Build extra programs
+  - CI_TARGETS="ext"        # Job2: Build extra programs
+  - CI_TARGETS="test"       # Job3: Test libraries.
   #### ext_test? adds 5min compile, runs 1 test.
 
 script:
