--- a/src/pyIdlak/Makefile
+++ b/src/pyIdlak/Makefile
@@ -1,51 +1,18 @@
 
 include ../kaldi.mk
 
-OBJFILES = python-api.o pyIdlak_wrap.o
+ifeq ($(PYIDLAK), true)
 
-LIBNAME = _pyIdlak
+PY_SUBDIRS = txp
 
-ADDLIBS = ../idlaktxp/idlak-txp.a ../util/kaldi-util.a ../matrix/kaldi-matrix.a ../base/kaldi-base.a
-
-EXTRA_CXXFLAGS = -fPIC -I$(PYTHONDEVINC) -I$(PCREROOT)/include -I$(EXPATROOT)/include -I$(PUJIXMLROOT)/src
-EXTRA_LDLIBS = -lpython2.7 -Wl,-rpath,"$(PCREROOT)/lib" $(PCREROOT)/lib/libpcre.so $(EXPATROOT)/lib/libexpat.so
-
-include ../makefiles/default_rules.mk
-
-ifeq ($(KALDI_FLAVOR), dynamic)
-  STATICLIB =
-else
-  STATICLIB = _pyIdlak.a
-endif
-
-.PHONY: wrapper
-wrapper:
-	$(SWIG) -c++ -python -o pyIdlak_wrap.cc pyIdlak.i
-pyIdlak_wrap.o: wrapper
-
-sharedlib: $(STATICLIB)
-ifeq ($(KALDI_FLAVOR), dynamic)
-  ifeq ($(shell uname), Darwin)
-	ln -fs $(KALDILIBDIR)/lib_pyIdlak.dylib _pyIdlak.dylib
-  else ifeq ($(shell uname), Linux)
-	ln -fs $(KALDILIBDIR)/lib_pyIdlak.so _pyIdlak.so
-  else  # Platform not supported
-	$(error Dynamic libraries not supported on this platform '$(shell uname)'. Python wrapper cannot be built.)
-  endif
-else
-  ifeq ($(shell uname), Darwin)
-	$(CXX) -dynamiclib -o _pyIdlak.dylib -install_name @rpath/_pyIdlak.a $(LDFLAGS) $(LDLIBS)
-  else ifeq ($(shell uname), Linux)
-	# Building shared library from static (static was compiled with -fPIC)
-	$(CXX) -shared -o _pyIdlak.so -Wl,--no-undefined -Wl,--as-needed \
-		-Wl,-soname=_pyIdlak.so,--whole-archive _pyIdlak.a $(ADDLIBS) $(PUJIXMLROOT)/scripts/libpugixml.a -Wl,--no-whole-archive $(LDFLAGS) $(LDLIBS)
-  else  # Platform not supported
-	$(error Dynamic libraries not supported on this platform '$(shell uname)'. Python wrapper cannot be built.)
-  endif
-endif
+all: $(PY_SUBDIRS)
+	@echo "Finished making python wrappers"
 
 clean:
-	-rm -f *.o *.a *.so pyIdlak.py pyIdlak.pyc pyIdlak_wrap.cc
-	@echo "REQUIRED FOR MAKE DO NOT DELETE!" > pyIdlak_wrap.cc
+	-for x in $(PY_SUBDIRS); do $(MAKE) -C $$x clean; done
 
-all: sharedlib
+.PHONY: $(PY_SUBDIRS)
+$(PY_SUBDIRS):
+	$(MAKE) -C $@
+
+endif # PYIDLAK
