Fixed make file
These were changes that should have been added to the PR

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,11 +24,15 @@ SUBDIRS_LIB = $(filter-out %bin, $(SUBDIRS))
 
 KALDI_SONAME ?= libkaldi.so
 
+include kaldi.mk
+
 # Optional subdirectories
-EXT_SUBDIRS = online onlinebin pyIdlak # python-kaldi-decoding
+EXT_SUBDIRS = online onlinebin
+ifeq ($(PYIDLAK), true)
+EXT_SUBDIRS += pyIdlak
+endif
 EXT_SUBDIRS_LIB = $(filter-out %bin, $(EXT_SUBDIRS))
 
-include kaldi.mk
 
 # Reset the default goal, so that the all target will become default
 .DEFAULT_GOAL :=
@@ -135,7 +139,6 @@ depend: $(addsuffix /depend, $(SUBDIRS))
 
 
 ext_depend: check_portaudio
-	$(MAKE) -C pyIdlak wrapper
 	-for x in $(EXT_SUBDIRS); do $(MAKE) -C $$x depend; done
 
 
@@ -184,5 +187,7 @@ online2: decoder gmm transform feat matrix util base lat hmm tree ivector cudama
 kws: base util hmm tree matrix lat
 idlaktxp: base util matrix
 idlakfeat: base util hmm feat transform
+ifeq ($(PYIDLAK), true)
 pyIdlak: base util matrix idlaktxp
+endif
 
