--- a/src/idlaktxp/Makefile
+++ b/src/idlaktxp/Makefile
@@ -12,6 +12,7 @@ TESTFILES = idlak-mod-test
 OBJFILES = txpxmldata.o txputf8.o txppcre.o txpnrules.o txppos.o \
 	   txppbreak.o txpsylmax.o txplexicon.o txplts.o txpmodule.o txpcexspec.o \
            txpparse-options.o txpabbrev.o \
+           txptrules.o \
 	   cexfunctions.o cexfunctionscatalog.o mod-tokenise.o \
 	   mod-postag.o mod-pauses.o mod-phrasing.o mod-pronounce.o mod-syllabify.o mod-cex.o
 
