--- a/src/pyIdlak/vocoder/Makefile
+++ b/src/pyIdlak/vocoder/Makefile
@@ -3,9 +3,9 @@ include ../../kaldi.mk
 
 ifeq ($(PYIDLAK), true)
 
-OBJFILES = python-vocode-api.o pyIdlak_vocode_wrap.o
+OBJFILES = python-vocoder-lib.o python-vocoder-api.o python-vocoder-mlpg.o pyIdlak_vocoder_wrap.o
 
-LIBNAME = _pyIdlak_vocode
+LIBNAME = _pyIdlak_vocoder
 
 # ADDLIBS = ../../idlaktxp/idlak-txp.a ../../util/kaldi-util.a ../../matrix/kaldi-matrix.a ../../base/kaldi-base.a
 
@@ -17,31 +17,31 @@ include ../../makefiles/default_rules.mk
 ifeq ($(KALDI_FLAVOR), dynamic)
   STATICLIB =
 else
-  STATICLIB = _pyIdlak_vocode.a
+  STATICLIB = _pyIdlak_vocoder.a
 endif
 
 .PHONY: wrapper
 wrapper:
-	$(SWIG) -c++ -python -o pyIdlak_vocode_wrap.cc -I$(SPTKROOT)/include pyIdlak_vocode.i
-pyIdlak_vocode_wrap.o: wrapper
+	$(SWIG) -c++ -python -o pyIdlak_vocoder_wrap.cc -I$(SPTKROOT)/include pyIdlak_vocoder.i
+pyIdlak_vocoder_wrap.o: wrapper
 
 sharedlib: $(STATICLIB)
 ifeq ($(KALDI_FLAVOR), dynamic)
   ifeq ($(shell uname), Darwin)
-	ln -fs $(KALDILIBDIR)/lib_pyIdlak_vocode.dylib _pyIdlak_vocode.dylib
+	ln -fs $(KALDILIBDIR)/lib_pyIdlak_vocoder.dylib _pyIdlak_vocoder.dylib
   else ifeq ($(shell uname), Linux)
-	ln -fs $(KALDILIBDIR)/lib_pyIdlak_vocode.so _pyIdlak_vocode.so
+	ln -fs $(KALDILIBDIR)/lib_pyIdlak_vocoder.so _pyIdlak_vocoder.so
   else  # Platform not supported
 	$(error Dynamic libraries not supported on this platform '$(shell uname)'. Python wrapper cannot be built.)
   endif
 else
   ifeq ($(shell uname), Darwin)
-	$(CXX) -dynamiclib -o _pyIdlak_vocode.dylib -install_name @rpath/_pyIdlak_vocode.a $(LDFLAGS) $(LDLIBS)
+	$(CXX) -dynamiclib -o _pyIdlak_vocoder.dylib -install_name @rpath/_pyIdlak_vocoder.a $(LDFLAGS) $(LDLIBS)
   else ifeq ($(shell uname), Linux)
 	# Building shared library from static (static was compiled with -fPIC)
 	@echo "Building shared library from static (static was compiled with -fPIC)"
-	$(CXX) -shared -o _pyIdlak_vocode.so -Wl,--no-undefined -Wl,--as-needed \
-		-Wl,-soname=_pyIdlak_vocode.so,--whole-archive _pyIdlak_vocode.a $(ADDLIBS) -Wl,--no-whole-archive \
+	$(CXX) -shared -o _pyIdlak_vocoder.so -Wl,--no-undefined -Wl,--as-needed \
+		-Wl,-soname=_pyIdlak_vocoder.so,--whole-archive _pyIdlak_vocoder.a $(ADDLIBS) -Wl,--no-whole-archive \
 		 $(LDFLAGS) $(LDLIBS)
   else  # Platform not supported
 	$(error Dynamic libraries not supported on this platform '$(shell uname)'. Python wrapper cannot be built.)
@@ -49,8 +49,8 @@ else
 endif
 
 clean_wrapper:
-	-rm -f pyIdlak_vocode.py pyIdlak_vocode.pyc pyIdlak_vocode_wrap.cc *.pyc
-	@echo "REQUIRED FOR MAKE DO NOT DELETE!" > pyIdlak_vocode_wrap.cc
+	-rm -f pyIdlak_vocoder.py pyIdlak_vocoder_wrap.cc *.pyc
+	@echo "REQUIRED FOR MAKE DO NOT DELETE!" > pyIdlak_vocoder_wrap.cc
 
 clean: clean_wrapper
 
