switched to python3, more tests, MLSA Mcep vocoder

--- a/src/pyIdlak/Makefile
+++ b/src/pyIdlak/Makefile
@@ -8,7 +8,11 @@ PY_SUBDIRS = txp vocoder
 all: $(PY_SUBDIRS)
 	@echo "Finished making python wrappers"
 
-clean:
+.PHONY: clean_py
+clean_py:
+	-rm -rf *.pyc __pycache__ test/*.pyc test/__pycache__
+	
+clean:  clean_py
 	-for x in $(PY_SUBDIRS); do $(MAKE) -C $$x clean; done
 
 .PHONY: $(PY_SUBDIRS)
