--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ addons:
       - liblapack-dev
       - clang-3.8
       - csh
-      - python3.5-dev
+      - libpython3.5-dev
 
 branches:
   only:
