--- a/src/pyIdlak/Makefile
+++ b/src/pyIdlak/Makefile
@@ -3,7 +3,7 @@ include ../kaldi.mk
 
 ifeq ($(PYIDLAK), true)
 
-PY_SUBDIRS = txp vocoder
+PY_SUBDIRS = pylib txp vocoder
 
 all: $(PY_SUBDIRS)
 	@echo "Finished making python wrappers"
@@ -11,12 +11,15 @@ all: $(PY_SUBDIRS)
 .PHONY: clean_py
 clean_py:
 	-rm -rf *.pyc __pycache__ test/*.pyc test/__pycache__
-	
+
 clean:  clean_py
 	-for x in $(PY_SUBDIRS); do $(MAKE) -C $$x clean; done
 
 .PHONY: $(PY_SUBDIRS)
 $(PY_SUBDIRS):
 	$(MAKE) -C $@
+
+txp: pylib
+vocoder: pylib
 
 endif # PYIDLAK
