--- a/idlak-server/requirements.txt
+++ b/idlak-server/requirements.txt
@@ -1,21 +1,120 @@
+absl-py==0.4.0
+alembic==1.0.0
+aniso8601==3.0.2
+astor==0.7.1
+audioread==2.1.6
+backcall==0.1.0
+bandmat==0.7
+bleach==2.1.4
+certifi==2018.8.13
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+cycler==0.10.0
+Cython==0.28.5
+decorator==4.3.0
+docopt==0.6.2
+docutils==0.14
+entrypoints==0.2.3
+fastdtw==0.3.2
 Flask==1.0.2
 Flask-JWT-Simple==0.0.3
 Flask-Migrate==2.2.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
-Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.0
-PyJWT==1.4.2
-SQLAlchemy==1.2.10
-Werkzeug==0.14.1
-alembic==1.0.0
-aniso8601==3.0.2
-click==6.7
+flit==1.0
+gast==0.2.0
+graphviz==0.8.4
+grpcio==1.14.1
+h5py==2.8.0
+html5lib==1.0.1
+idna==2.6
+inflect==1.0.0
+ipykernel==4.8.2
+ipython==6.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.0
 itsdangerous==0.24
+jedi==0.12.1
+Jinja2==2.10
+joblib==0.12.2
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+Keras==2.2.2
+Keras-Applications==1.0.4
+Keras-Preprocessing==1.0.2
+kiwisolver==1.0.1
+librosa==0.6.2
+llvmlite==0.24.0
+lws==1.2
+lxml==4.2.5
+Mako==1.0.7
+Markdown==2.6.11
+MarkupSafe==1.0
+matplotlib==2.2.3
+mistune==0.8.3
+mxnet-cu90mkl==1.2.1.post1
+nbconvert==5.3.1
+nbformat==4.4.0
+nnmnkwii==0.0.15
+notebook==5.6.0
+numba==0.39.0
+numpy==1.15.0
+pandocfilters==1.4.2
+parso==0.3.1
 passlib==1.7.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==5.2.0
+prometheus-client==0.3.1
+prompt-toolkit==1.0.15
+protobuf==3.6.1
+ptyprocess==0.6.0
+PyAudio==0.2.11
+pycparser==2.18
+pygal==2.4.0
+Pygments==2.2.0
+PyJWT==1.4.2
+pyparsing==2.2.0
+pysptk==0.1.11
 python-dateutil==2.7.3
 python-editor==1.0.3
+python-pcre==0.7
+pytoml==0.1.18
 pytz==2018.5
+PyYAML==3.13
+pyzmq==17.1.2
+qtconsole==4.4.0
+requests==2.18.4
+requests-download==0.1.2
+resampy==0.2.1
+scikit-learn==0.19.2
+scipy==1.1.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
-wsgiref==0.1.2
+sklearn==0.0
+sockeye==1.18.47
+sounddevice==0.3.11
+SQLAlchemy==1.2.10
+tensorboard==1.10.0
+tensorboardX==1.2
+tensorflow-gpu==1.9.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+torch==0.4.0
+tornado==5.1
+tqdm==4.24.0
+traitlets==4.3.2
+typing==3.6.4
+Unidecode==1.0.22
+urllib3==1.22
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.4.0
+xmltodict==0.11.0
