--- a/idlak-server/config.ini
+++ b/idlak-server/config.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
 JWT_AUTH_USERNAME_KEY = uid
 SPEECH_PATH = ../idlak-egs/tts_tangle_idlak/s2/
+HOST = 0000
+PORT = 5000
 CURRENT_USER = skaiste
-LOGGING = INFO
-LOG_FILE = idlak-server.log
 
 [JWT]
 TOKEN_EXPIRATION_DELTA = 30
